[tool.poetry]
name = "arteklabs/samples-git"
version = "1.0.0-beta"
description = "Arteklabs Samples: Git"
authors = [
    "Diogo Pereira-Marques <dipm@novonordisk.com>",
]
readme = "README.rst"
homepage = "https://github.com/arteklabs/samples-git"
repository = "https://github.com/arteklabs/samples-git"
keywords = [
    "git"
]
classifiers = []

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.0"
isort = "^5.11.3"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
invoke="^2.0.0"
sphinx="^6.1.3"
furo="^2022.12.7"
bandit="^1.7.4"
vulture="^2.7"
radon = "^5.1.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["tasks.py"]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
